# energy-forecast-hub

./: .gitignore  Dockerfile  Dockerfile.dashboard  Dockerfile.julia  Dockerfile.python  Dockerfile.r  Manifest.toml  Project.toml  README.md  app.py  dashboard.py  docker-compose.yml  eda.ipynb  energy_forecast_R.ipynb  energy_forecast_py.ipynb  import_dataset.py  main.py  notebook.ipynb  predict.py  pyproject.toml  remake_guideline.md  requirements.txt  test_feature_alignment.py
R_project/: api.R  app.R  install_packages.R  train_comparison.R
R_project/R/: processing.R
R_project/models/: production_model_r.rds
data/: df_test.csv  df_train.csv
src/: api.jl  evaluation.py  preprocessing.jl  preprocessing.py  train.jl  training.py  visualization.py
