[tool.poetry]
name = "energy-forecast-hub"
version = "0.1.0"
description = "Energy Forecast Hub Remake"
authors = ["Jefferson Conza <jconza@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "*"
uvicorn = "*"
scikit-learn = "*"
xgboost = "*"
pandas = "*"
joblib = "*"
loguru = "*"
pydantic = "*"
streamlit = "*"
plotly = "*"
requests = "*"
matplotlib = "*"
seaborn = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
